--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,25 @@
-body {
-    background-color: aqua;
+/* RESET */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+/* COMMON */
+.container {
+    width: 90%;
+    margin: 0 auto;
+}
+
+/* HEADER */
+header {
+    height: 60px;
+    background-color: #4ea0ff;
+    background-image: url(../img/pattern.png);
+    background-size: 20%;
+}
+
+#header-logo {
+    margin-top: 20px;
+    height: 40px;
 }
